objects/Collateral_Facility__c.object
<CustomObject>
    <fields>
        <fullName>ACMFacility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ACMFacility</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ACMFacility__c.Relationship__c</field>
                <operation>equals</operation>
                <valueField>$Source.Facility_Client__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACMFacility__c</referenceTo>
        <relationshipLabel>Collateral Facilities</relationshipLabel>
        <relationshipName>Collateral_Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acm_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Acm External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acm_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Acm_Facility__c.Relationship__c</field>
                <operation>equals</operation>
                <valueField>$Source.Facility_Client__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Acm_Facility__c</referenceTo>
        <relationshipLabel>Collateral Facilities</relationshipLabel>
        <relationshipName>Collateral_Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collateral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collateral</label>
        <referenceTo>Collateral__c</referenceTo>
        <relationshipName>Collateral_Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility Beneficiary</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Collateral Facilities</relationshipLabel>
        <relationshipName>Collateral_Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility_Id__c</fullName>
        <formula>ACMFacility__r.Facility_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <formula>ACMFacility__r.FACILITYPRODUCTDESCRIPTION__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saved_To_Acm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if collateral facility was saved to acm</description>
        <inlineHelpText>Check if collateral facility was saved to acm</inlineHelpText>
        <label>Saved To Acm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isPrimaryRelationship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPrimaryRelationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>remediation_message__c</fullName>
        <label>source remediation message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>remediation_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>source remediation required</label>
        <type>Checkbox</type>
    </fields>
    <label>Collateral Facility</label>
    <nameField>
        <displayFormat>CF-{00000}</displayFormat>
        <label>Collateral Facility #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collateral Facilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>